<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slidingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="60dp"
    sothree:umanoScrollableView="@id/scrollview"
    sothree:umanoShadowHeight="3dp"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <com.raed.drawingview.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            app:brush="pen"
            app:brush_color="#000"
            app:drawing_background_color="#ffff" />


        <!-- <smartboard.fyp.com.smartapp.Multitouch
             android:id="@+id/drawing"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/toolbar"
             />-->


        <ImageView
            android:id="@+id/overflow_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_overflow" />

        <include
            android:id="@+id/menu_layout"
            layout="@layout/toolbar_menu"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_alignTop="@+id/drawing_view"
            android:visibility="invisible" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/colorFAB"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="80dp"
            android:focusableInTouchMode="true"
            android:src="@drawable/ic_fab_search"
            android:visibility="invisible"
            app:backgroundTint="@color/colorFAB1"
            app:elevation="6dp"
            app:fabSize="normal"
            app:pressedTranslationZ="12dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="140dp"
            android:src="@drawable/ic_marker_fab"
            android:visibility="invisible"
            app:backgroundTint="@color/colorFAB2"
            app:elevation="6dp"
            app:fabSize="normal"
            app:pressedTranslationZ="12dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="200dp"
            android:src="@drawable/ic_fab_eraser"
            android:visibility="invisible"
            app:backgroundTint="@color/colorFAB3"
            app:elevation="6dp"
            app:fabSize="normal"
            app:pressedTranslationZ="12dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="260dp"
            android:src="@drawable/ic_zoom_in"
            android:visibility="invisible"
            app:backgroundTint="@color/colorFAB4"
            app:elevation="6dp"
            app:fabSize="normal"
            app:pressedTranslationZ="12dp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <ImageView
            android:id="@+id/color_preview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:tint="@color/black"
            app:srcCompat="@drawable/round_button" />

        <TextView
            android:id="@+id/current_utility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/color_preview"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_utility"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/color_preview"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:gravity="center"
            android:tint="@color/gray_light"
            app:srcCompat="@drawable/arrow_drop_up_black" />

        <RelativeLayout
            android:id="@+id/seperator01"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/color_preview"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/brush_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/brush_view"
            android:layout_centerHorizontal="true"
            android:text="Brush View"
            android:textSize="@dimen/text_size" />

        <com.raed.drawingview.BrushView
            android:id="@+id/brush_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/seperator01" />

        <RelativeLayout
            android:id="@+id/seperator02"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/brush_view"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/seperator02">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Brush Size"
                    android:textSize="@dimen/text_size" />

                <SeekBar
                    android:id="@+id/size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="5dp"
                    android:max="100"
                    android:min="1"
                    android:progress="25"
                    android:progressDrawable="@drawable/custom_seekbar"
                    android:thumb="@drawable/custom_thumb_seekbar" />

                <TextView
                    android:id="@+id/tools_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/size"
                    android:layout_centerHorizontal="true"
                    android:text="Tools"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:id="@+id/utility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/size"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <ImageView
                        android:id="@+id/utility_pen"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:src="@drawable/marker" />

                    <ImageView
                        android:id="@+id/utility_pencil"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:src="@drawable/pencil" />

                    <ImageView
                        android:id="@+id/utility_eraser"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:src="@drawable/eraser" />

                    <ImageView
                        android:id="@+id/utility_airbrush"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:src="@drawable/airbrush" />


                    <ImageView
                        android:id="@+id/utility_calligraphy"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:src="@drawable/pen" />


                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/seperator03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/utility"
                    android:layout_marginTop="5dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/color"
                    android:layout_centerHorizontal="true"
                    android:text="Colors"
                    android:textSize="@dimen/text_size" />


                <LinearLayout
                    android:id="@+id/color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/seperator03">

                    <include
                        layout="@layout/color_palattes"
                        android:layout_width="match_parent"
                        android:layout_height="170dp" />
                </LinearLayout>


                <RadioGroup
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/color"
                    android:layout_marginTop="5dp">

                    <RadioButton
                        android:id="@+id/background_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/background_color" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp">

                        <ImageView
                            android:id="@+id/background_color_preview"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:tint="#eee"
                            app:srcCompat="@drawable/round_button" />

                        <Button
                            android:id="@+id/choose_background_color"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/background_color_preview"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="7dp"
                            android:layout_toRightOf="@+id/background_color_preview"
                            android:background="@drawable/custom_button_background"
                            android:text="@string/choose_color"
                            android:textColor="@color/white" />

                    </RelativeLayout>

                    <RadioButton
                        android:id="@+id/background_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/background_color_preview"
                        android:text="@string/background_image" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp">

                        <smartboard.fyp.com.smartapp.SelectableRoundedImageView
                            android:id="@+id/background_image_preview"
                            android:layout_width="50dp"
                            android:layout_height="50dp" />

                        <Button
                            android:id="@+id/choose_background_image"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/background_image_preview"
                            android:layout_marginLeft="10dp"
                            android:layout_toRightOf="@+id/background_image_preview"
                            android:background="@drawable/custom_button_background"
                            android:enabled="false"
                            android:text="@string/choose_image"
                            android:textColor="@color/white" />
                    </RelativeLayout>
                </RadioGroup>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>


    <!--<android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:background="@color/material_drawer_background"
          android:elevation="4dp"
          app:titleTextColor="@color/md_white_1000"
          tools:ignore="UnusedAttribute" />


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

          <android.support.design.widget.TabLayout
              android:id="@+id/tablayout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/material_drawer_background"
              app:tabSelectedTextColor="@color/material_drawer_selected_text"
              app:tabTextColor="@color/material_drawer_primary_text">

              <android.support.design.widget.TabItem
                  android:id="@+id/tab_Profile"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:background="@color/material_drawer_background"
                  android:text="Profile" />
          </android.support.design.widget.TabLayout>

          <android.support.v4.view.ViewPager
              android:id="@+id/viewpager"
              android:layout_width="match_parent"
              android:layout_height="match_parent"/>

      </LinearLayout>-->
